# opencv.camshift

./: CMakeLists.txt  main.cpp
